--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body{
     border-bottom: solid black 1px;
     gap: 10px;
     align-items: center;
+    position: sticky;
+    top: 0;
+    background-color: white;
+    z-index: 1;
 }
 .navbar__s1__title{
     color: #A435F0;    
@@ -40,6 +44,23 @@ body{
     gap: 10px;
     align-content: center;
 }
+.mylearning{
+    position: relative;
+    cursor: pointer;
+}
+.mylearning__popup{
+    position: absolute;
+    background-color: white;
+    border: solid black 1px;
+    width: 100px;
+    top: 30px;
+    padding: 20px;
+    right: 0;
+    display: none;
+}
+.mylearning:hover .mylearning__popup{
+    display: block;
+}
 .categories{
     display: flex;
     padding: 10px;
@@ -54,10 +75,22 @@ body{
     padding: 7px;
     border-radius: 20px;
 }
+.sale-image{
+    position: relative;
+}
 
 .sale-image img{
     padding-left: 90px;
     padding-right: 50px;
+}
+.sale-image__offer{
+    width: 25%;
+    border: solid black 2px;
+    background-color: white;
+    padding: 2%;
+    position: absolute;
+    top: 10%;
+    left: 15%;
 }
 .recommended{
     padding: 10px;
