--- a/style.css
+++ b/style.css
@@ -74,6 +74,14 @@ body{
     color: white;
     padding: 7px;
     border-radius: 20px;
+    cursor: pointer;
+    border: #A435F0 solid 1px; 
+}
+.categories p:hover{
+    transition: 1s;
+    background-color: transparent; 
+    color: black;
+    border: #A435F0 solid 1px;   
 }
 .sale-image{
     position: relative;
@@ -91,6 +99,21 @@ body{
     position: absolute;
     top: 10%;
     left: 15%;
+    animation: zoom;
+    animation-duration: 3s;
+    opacity: 0;
+    animation-fill-mode: forwards;
+
+}
+@keyframes zoom{
+    0%{
+        transform: scale(0);
+        opacity: 0;
+    }
+    100%{
+        opacity: 1;
+        transform: scale(1);
+    }
 }
 .recommended{
     padding: 10px;
